<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111"
    tools:context="com.toxicmania.toxicmania.activity.BadgeActivity">

    <TextView
        android:id="@+id/congratsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:ems="10"
        android:text="@string/badge_congrats"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorSecondary"/>

    <ImageView
        android:id="@+id/badgeLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/beginner_badge"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/badgeContinueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_btn"
        android:textSize="20sp"
        android:theme="@style/submitButton"
        android:layout_alignBottom="@+id/badgeLogo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/congratsText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/badge_earned"
        android:textAlignment="center"
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/badgeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:textAlignment="center"
        android:textColor="#0288D1"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_above="@+id/badgeContinueButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/badgeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/badgeContinueButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"/>
</RelativeLayout>
