<ScrollView android:id="@+id/about_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:text="@string/what_is_toxic"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textView"
                android:textColor="@color/colorSecondaryDark"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:text="@string/what_is_toxic_1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black_overlay"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paly_guid"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textView2"
                android:textColor="@color/colorSecondaryDark"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/paly_guid_1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black_overlay"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center_vertical"
                android:src="@drawable/ic_hw_rating_faces" />

            <Button
                android:id="@+id/button2"
                style="@style/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goHome"
                android:layout_alignTop="@+id/imageView"
                android:layout_marginTop="130dp"
                android:text="continue"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="23dp" />

        </RelativeLayout>

</ScrollView>
