<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.toxicmania.toxicmania.activity.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:text="@string/About_header"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textView"
                android:textColor="@color/colorSecondaryDark"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/about_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/about_2"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/toxicmania_logo"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/button3"
                style="@style/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="15dp"
                android:onClick="nextAction"
                android:text="Next" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
